@@ -1,5 +1,7 @@
 4.1.7
 - Bugfix: Removed a faulty 'use' doc comment.
+- Bugfix: Use the correct method signature for the error handler
+  callback.
 
 4.1.6
 - Bugfix: Added the missing path filter to the real path resolver.
